[package]
name = "tomis"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Victor Palade <victor@cloudflavor.io>"]
homepage = "https://cloudflavor.io"
repository = "https://github.com/cloudflavor/tomis"
description = "Tomis is a control plane for managing kubernetes clusters"

[dependencies]
tokio = { version = "^1.38", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.11" }
anyhow = "1.0"
actix = "0.13.5"
redis = "0.25.4"
structopt = "0.3.26"
prost-types = "0.12.6"
prost = "0.12.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
